# theoretical_regseq

./: .gitignore  README.md
SI_notebooks/: figS10_twist_costs.ipynb  figS11_xor.ipynb  figS12_double_activation.ipynb  figS15_inducible_activator.ipynb  figS16_experimental_noise.ipynb  figS17_log_normal.ipynb  figS18_extrinsic_weak_repressor.ipynb  figS19_extrinsic_noise_all_architectures.ipynb  figS3_mutual_information.ipynb  figS5_regseq_comparison.ipynb  figS6_recovering_signals.ipynb  figS7_optimal_mut_rate.ipynb  figS8_optimal_mut_rate2.ipynb  figureS11.ipynb  figureS14.ipynb  figureS4.ipynb  figureS7.ipynb  figureS7_new.ipynb  figureS9.ipynb  regseq-footprints.ipynb
data/: Appendix2_Figure2_source_data.xlsx  ecoli_gene_list.csv  heinemann_data_cleaned.csv  promoter_architectures.csv  twist.csv  ykgE_dataset.csv  ykgE_dataset_combined.csv
figs/: peak_calling.ai
figures/: figure2.ipynb  figure3.ipynb  figure4.ipynb  figure5.ipynb  figure7.ipynb  figure8.ipynb  marR_footprint.ipynb
notebooks/: README.md  expression_levels.ipynb  expression_shift.ipynb  extrinsic_noise.ipynb  fig10_inducer.ipynb  fig12_extrinsic_noise.ipynb  (+30 more)
src/: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
src/tests/: test_seq_utils.py  test_simulate.py
src/tregs/: __init__.py  footprint.py  mpl_pboc.py  seq_utils.py  simulate.py  solve_utils.py  test_footprint.py  test_seq_utils.py  test_simulate.py  test_utils.py  utils.py  wgregseq.py
src/tregseq/: footprint.py  simulate.py  utils.py  wgregseq.py
src/tregseq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+111 files in other folders)
